--- a/Layout.html
+++ b/Layout.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="Layout.css">
 </head>
 <body>
-  <!-- Topo -->
+  
   <header>
     <div class="topbar">
       <button id="menuBtn">☰ Menu</button>
@@ -37,21 +37,21 @@
   <main>
     <section class="noticias">
       
-      <!-- Notícia 1 (jornal O Tempo) -->
+      <!-- (jornal O Tempo) -->
       <article class="noticia">
         <img src="img/otempo.png" alt="Capa do jornal O Tempo com notícia sobre Minas Gerais">
         <a href="#"><h2>O Tempo</h2></a>
         <p>Minas Gerais ganha tempo na negociação da dívida</p>
       </article>
 
-      <!-- Notícia 2 (Lula Picanha) -->
+      <!-- (Lula Picanha) -->
       <article class="noticia destaque">
         <h3 class="categoria brasil">Brasil</h3>
         <h1>Lula decreta Picanha gratuita a todos brasileiros que VOTARAM <span class="destaque-vermelho">NELE</span>.</h1>
         <p>O presidente Luiz Inácio Lula da Silva decretou a partir dessa segunda feira (01) que todos seus eleitores irão ganhar Picanha de graça.</p>
       </article>
 
-      <!-- Notícia 3 (Escalação Seleção Brasileira) -->
+      <!-- (Escalação Seleção Brasileira) -->
       <article class="noticia">
         <h3 class="categoria confira">CONFIRA</h3>
         <p>Técnico da Seleção Brasileira Carlos Ancelotti escala novo elenco para Copa do Mundo de 2026.</p>
@@ -59,9 +59,9 @@
         alt="Escalação provável da Seleção Brasileira para a Copa 2026">
       </article>
 
-      <!-- Notícia 4 (Alerta Defesa Civil) -->
+      <!-- (Alerta Defesa Civil) -->
       <article class="noticia">
-        <h3 class="categoria alerta">☁️ Alerta</h3>
+        <h3 class="categoria alerta">Alerta</h3>
         <p>A <b>Defesa Civil</b> emitiu uma nota de segurança a todos moradores capixabas residentes do Norte do estado (ES) para um possível temporal para esse fim de semana.</p>
         <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQKF7Zgs_aD3mywpEFxhHLUS4a4flrSL1a9xs6Reidved9PpVXE" alt="Previsão de temporal no Espírito Santo">
       </article>
